--- a/social_login_node/views/login.ejs
+++ b/social_login_node/views/login.ejs
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
 <html>
-   <head>
-       <title> Login </title>
-   </head>
-   <body>
+
+<head>
+    <title> Login </title>
+    <link rel="stylesheet" href="/css/google-login-button.css">
+</head>
+
+<body>
     <!--Index -->
-       <div class="row">
-           <div class="col-sm-8 col-sm-offset-2">
-               <div class="row">
-                   <div class="col-sm-12">
-                       <form method="post">
-                            <% if (message.length > 0) { %>
-                                <div class="alert alert-danger"><%=message%></div>
-                            <% } %>
-                           <div class="form-group">
-                               <label for="username">Username</label>
-                               <input type="text" class="form-control" id="username" placeholder="username" name="username">
-                           </div>
-                           <div class="form-group">
-                               <label for="password">Password</label>
-                               <input type="password" class="form-control" id="password" placeholder="password" name="password">
-                           </div>
-                           <button class="btn btn-primary btn-block">Login</button>
-                       </form>
-                   </div>
-                   <div class="row top-margin">
-                       <div class="col-sm-6">
-                           <a class="btn btn-block google" href="<%= routes.googleAuth %>">
-                               <i class="fafa-google-plus"></i>Google
-                           </a>
-                       </div>
-                   </div>
-                   <div class="row top-margin">
-                      <div class="col-sm-6">
-                          <a class="btn btn-block kakao" href="<%= routes.kakaoAuth %>">
-                              <i class="fa-kakao-talk"></i>Kakao
-                          </a>
-                      </div>
-                  </div>
-               </div>
-           </div>
-       </div>
-   </body>
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="row">
+                <div class="row top-margin">
+                    <div class="col-sm-6">
+                        <!-- 구글 로그인 버튼 디자인 -->
+                        <div class='g-sign-in-button' onclick="location.href='<%= routes.googleAuth %>'">
+                            <div class=content-wrapper>
+                                <div class='logo-wrapper'>
+                                    <img src='https://developers.google.com/identity/images/g-logo.png'>
+                                </div>
+                                <span class='text-container'>
+                                    <span>Google 로그인</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="row top-margin">
+                    <div class="col-sm-6">
+                        <input type="image" src="/images/kakao_login_medium_wide.png" onclick="location.href='<%= routes.kakaoAuth %>'"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</body>
+
 </html>
 
-<link rel="stylesheet" href="css/style.css">
+
+<link rel="stylesheet" href="/css/style.css">
